# Orbit

./: .gitignore  CLAUDE.md  README.md  schema.sql
backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt  test_agent.py
backend/agents/: calendar_agent.py  email_agent.py  google_calendar_agent.py  orchestrator.py  tasks_agent.py
backend/api/: deps.py
backend/api/routes/: activity.py  approve.py  chat.py  conversations.py  google_oauth.py  memories.py  oauth.py  preferences.py  sms.py  telegram.py  usage.py
backend/repositories/: activity.py  approvals.py  channels.py  conversations.py  integrations.py  messages.py  preferences.py
backend/scripts/: check_db.py  rotate_fernet_key.py  setup_telegram_webhook.py
backend/services/: agent_factory.py  agno_db.py  claude_with_fallback.py  conversation_titler.py  database.py  encryption.py  event_translator.py  google_token_manager.py  graph_safety.py  pricing.py  redis.py  run_resume.py  sms_dispatch.py  sms_safety.py  spend_cap.py  supabase.py  telegram_client.py  telegram_dispatch.py  token_manager.py  twilio_client.py
backend/tests/: conftest.py  test_config_validator.py  test_encryption_rotation.py  test_graph_safety.py  test_o365_boolean_returns.py  test_repository_isolation.py  test_sms_safety.py  test_spend_cap.py  test_telegram_dispatch.py  test_telegram_webhook.py  test_titler_guard.py  test_tool_progress.py
backend/tools/: calendar.py  email.py  google_calendar.py  tasks.py
docs/: ARCHITECTURE_CHANGES.md  ROADMAP.md  STATUS.md  agents.md  architecture.md  oauth.md  schema.md  streaming.md
docs/handoff/: 2026-05-21-telegram-build.md  2026-05-22-coordinate-mode-decision.md  2026-05-22-perf-and-polish.md  agno-issue-8029-coordinate-followup.md
docs/superpowers/specs/: 2026-04-26-bottom-up-refactor-design.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/db/: schema.ts
frontend/src/hooks/: use-sse.ts
frontend/src/lib/: api.ts  auth.ts  env.ts  parse-tool-result.ts  theme.ts
frontend/src/stores/: activity-store.ts  auth-store.ts  chat-store.ts
(+34 files in other folders)
