[project]
name = "orbit-backend"
version = "0.1.0"
description = "Orbit AI assistant backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "agno[anthropic]>=2.5.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "upstash-redis>=1.0.0",
    "upstash-ratelimit>=1.0.0",
    "O365>=2.0.30",
    "msal>=1.28.0",
    "google-auth>=2.30.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.140.0",
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Pin both fixture and test loops to "session" so a session-scoped
# asyncpg pool is reachable from every test without the
# "attached to a different loop" error pytest-asyncio raises by default.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
